move to terser and add less into build process

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build-main": "rollup -c",
     "build-tw": "rollup -c rollup-webTileWorker.config.js",
     "build-mw": "rollup -c rollup-webMeshWorker.config.js",
-    "build-main-min": "npm run build-main && uglifyjs build/CaveView/js/CaveView.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/CaveView-min.js",
-    "build-tw-min": "npm run build-tw && uglifyjs build/CaveView/js/workers/webTileWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webTileWorker-min.js",
-    "build-mw-min": "npm run build-mw && uglifyjs build/CaveView/js/workers/webMeshWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webMeshWorker-min.js",
+    "build-main-min": "npm run build-main && terser build/CaveView/js/CaveView.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/CaveView-min.js",
+    "build-tw-min": "npm run build-tw && terser build/CaveView/js/workers/webTileWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webTileWorker-min.js",
+    "build-mw-min": "npm run build-mw && terser build/CaveView/js/workers/webMeshWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webMeshWorker-min.js",
     "dev": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c -w \" \"http-server build -c-1 -p 8080\"",
     "dev-tile": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-webTileWorker.config.js -w \" \"http-server build -c-1 -p 8080\"",
     "lint": "eslint src",
@@ -43,9 +43,10 @@
     "rollup": "^1.1.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-less": "^0.1.5",
     "rollup-plugin-node-resolve": "^4.0.0",
+    "terser": "^3.14.1",
     "three": "0.100.0",
-    "uglify-es": "^3.3.10",
     "x18n": "^2.0.3"
   },
   "dependencies": {}
