--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "concurrently": "^4.1.0",
     "eslint": "^5.13.0",
-    "http-server": "^0.11.0",
+    "http-server": "^0.11.1",
     "proj4": "^2.5.0",
     "rollup": "^1.1.2",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -46,7 +46,7 @@
     "rollup-plugin-less": "^0.1.5",
     "rollup-plugin-node-resolve": "^4.0.0",
     "terser": "^3.16.1",
-    "three": "0.100.0",
+    "three": "^0.100.0",
     "x18n": "^2.0.3"
   },
   "dependencies": {}
