--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build-main": "rollup -c",
     "build-tw": "rollup -c rollup-webTileWorker.config.js",
     "build-mw": "rollup -c rollup-webMeshWorker.config.js",
+    "build-mb": "rollup -c rollup-mapboxTileWorker.config.js",
     "build-main-min": "npm run build-main && terser build/CaveView/js/CaveView.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/CaveView-min.js",
     "build-tw-min": "npm run build-tw && terser build/CaveView/js/workers/webTileWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webTileWorker-min.js",
     "build-mw-min": "npm run build-mw && terser build/CaveView/js/workers/webMeshWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webMeshWorker-min.js",
@@ -41,12 +42,12 @@
     "eslint": "^5.16.0",
     "http-server": "^0.11.1",
     "proj4": "^2.5.0",
-    "rollup": "^1.19.4",
+    "rollup": "^1.26.5",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-less": "^1.1.0",
     "rollup-plugin-node-resolve": "^4.2.4",
-    "terser": "^4.2.0",
+    "terser": "^4.4.0",
     "three": "^0.107.0",
     "x18n": "^2.0.3"
   },
