--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-tw-min": "npm run build-tw && terser build/CaveView/js/workers/webTileWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webTileWorker-min.js",
     "build-mw-min": "npm run build-mw && terser build/CaveView/js/workers/webMeshWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webMeshWorker-min.js",
     "dev": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c -w \" \"http-server build -c-1 -p 8080\"",
+    "dev2": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-cv2.config.js -w \" \"http-server build -c-1 -p 8080\"",
     "dev-tile": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-webTileWorker.config.js -w \" \"http-server build -c-1 -p 8080\"",
     "lint": "eslint src",
     "build": "npm run build-main && npm run build-tw && npm run build-mw",
