--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "2.0.0",
   "description": "3D Cave Survey Viewer",
   "scripts": {
-    "build-main": "rollup -c",
-    "build-tw": "rollup -c rollup-webTileWorker.config.js",
-    "build-mw": "rollup -c rollup-webMeshWorker.config.js",
-    "build-main-min": "npm run build-main && terser build/CaveView/js/CaveView.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/CaveView-min.js",
-    "build-tw-min": "npm run build-tw && terser build/CaveView/js/workers/webTileWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webTileWorker-min.js",
-    "build-mw-min": "npm run build-mw && terser build/CaveView/js/workers/webMeshWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webMeshWorker-min.js",
     "dev": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c -w \" \"http-server build -c-1 -p 8080\"",
-    "dev2": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-cv2.config.js -w \" \"http-server build -c-1 -p 8080\"",
     "dev-tile": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-webTileWorker.config.js -w \" \"http-server build -c-1 -p 8080\"",
+    "build-main": "rollup -c",
+    "build-main-min": "npm run build-main && terser build/CaveView/js/CaveView2.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/CaveView2-min.js",
+    "build-tw": "rollup -c rollup-webTileWorker.config.js",
+    "build-tw-min": "npm run build-tw && terser build/CaveView/js/workers/webTileWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webTileWorker-min.js",
+    "build-mw": "rollup -c rollup-webMeshWorker.config.js",
+    "build-mw-min": "npm run build-mw && terser build/CaveView/js/workers/webMeshWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webMeshWorker-min.js",
     "lint": "eslint src",
     "build": "npm run build-main && npm run build-tw && npm run build-mw",
-    "build-min": "npm run build-main-min && npm run build-tw-min && npm run build-mw-min",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-min": "npm run build-main-min&& npm run build-tw-min && npm run build-mw-min",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev-old": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-old.config.js -w \" \"http-server build -c-1 -p 8080\"",
+    "build-main-old": "rollup -c rollup-old.config.js",
+    "build-main-min-old": "npm run build-main-old && terser build/CaveView/js/CaveView.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/CaveView2-min.js"
   },
   "repository": {
     "type": "git",
@@ -38,15 +40,15 @@
   },
   "homepage": "https://github.com/aardgoose/CaveView.js#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^7.0.0",
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
     "http-server": "^0.12.1",
     "proj4": "^2.6.0",
     "rollup": "^1.31.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-less": "^1.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "terser": "^4.6.3",
     "three": "^0.113.0",
     "x18n": "^2.0.3"
