--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.0.2",
   "description": "3D Cave Survey Viewer",
   "scripts": {
-    "dev": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c -w \" \"http-server build -c-1 -p 8080\"",
-    "dev-tile": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-webTileWorker.config.js -w \" \"http-server build -c-1 -p 8080\"",
+    "dev": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c -w \" \"serve -l 8080 build \"",
+    "dev-tile": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-webTileWorker.config.js -w \" \"serve -l 8080 build \"",
     "build-main": "rollup -c",
     "build-main-min": "npm run build-main && terser build/CaveView/js/CaveView2.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/CaveView2-min.js",
     "build-tw": "rollup -c rollup-webTileWorker.config.js",
@@ -40,17 +40,17 @@
   },
   "homepage": "https://github.com/aardgoose/CaveView.js#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-json": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "concurrently": "^5.1.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.0.3",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
-    "http-server": "^0.12.1",
-    "proj4": "^2.6.0",
-    "rollup": "^1.31.1",
+    "proj4": "^2.6.1",
+    "rollup": "^1.0.0",
     "rollup-plugin-less": "^1.1.0",
-    "terser": "^4.6.3",
-    "three": "^0.113.0",
+    "serve": "^11.3.0",
+    "terser": "^4.6.13",
+    "three": "^0.116.0",
     "x18n": "^2.0.3"
   },
   "dependencies": {}
