--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/pluginutils": "^3.0.10",
     "concurrently": "^5.2.0",
-    "eslint": "^6.8.0",
-    "proj4": "^2.6.1",
-    "rollup": "^1.0.0",
+    "eslint": "^7.0.0",
+    "proj4": "^2.6.2",
+    "rollup": "^2.10.2",
     "rollup-plugin-less": "^1.1.0",
     "serve": "^11.3.0",
     "terser": "^4.6.13",
