update deps and add new build tasks

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c -w \" \"serve -l 8080 build \"",
     "dev-tile": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-webTileWorker.config.js -w \" \"serve -l 8080 build \"",
+    "dev-mesh": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-webMeshWorker.config.js -w \" \"serve -l 8080 build \"",
     "dev-gltf": "concurrently --names \"gtlfWorker,HTTP,CaveView\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\" \"rollup -c rollup-gltfWorker.config.js -w \" \"serve -l 8080 build \" \"rollup -c -w \"",
     "build-main": "rollup -c",
     "build-main-min": "npm run build-main && terser build/CaveView/js/CaveView2.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/CaveView2-min.js",
@@ -12,9 +13,11 @@
     "build-tw-min": "npm run build-tw && terser build/CaveView/js/workers/webTileWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webTileWorker-min.js",
     "build-mw": "rollup -c rollup-webMeshWorker.config.js",
     "build-mw-min": "npm run build-mw && terser build/CaveView/js/workers/webMeshWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/webMeshWorker-min.js",
+    "build-gltf": "rollup -c rollup-gltfWorker.config.js",
+    "build-gltf-min": "npm run build-gltf && terser build/CaveView/js/workers/gltfWorker.js -cm --preamble \"// threejs.org/license\" > build/CaveView/js/workers/gltfWorker-min.js",
     "lint": "eslint src",
-    "build": "npm run build-main && npm run build-tw && npm run build-mw",
-    "build-min": "npm run build-main-min&& npm run build-tw-min && npm run build-mw-min",
+    "build": "npm run build-main && npm run build-tw && npm run build-mw && npm run build-gltf",
+    "build-min": "npm run build-main-min && npm run build-tw-min && npm run build-mw-min && npm run build-gltf-min",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-old": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c rollup-old.config.js -w \" \"http-server build -c-1 -p 8080\"",
     "build-main-old": "rollup -c rollup-old.config.js",
@@ -46,13 +49,13 @@
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/pluginutils": "^3.0.10",
     "concurrently": "^5.2.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "proj4": "^2.6.2",
-    "rollup": "^2.10.2",
+    "rollup": "^2.11.2",
     "rollup-plugin-less": "^1.1.0",
-    "serve": "^11.3.0",
-    "terser": "^4.6.13",
-    "three": "^0.116.0",
+    "serve": "^11.3.1",
+    "terser": "^4.7.0",
+    "three": "^0.117.0",
     "x18n": "^2.0.3"
   },
   "dependencies": {}
