--- a/package.json
+++ b/package.json
@@ -44,18 +44,19 @@
   },
   "homepage": "https://github.com/aardgoose/CaveView.js#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/pluginutils": "^4.1.0",
     "concurrently": "^5.3.0",
-    "eslint": "^7.12.1",
-    "proj4": "^2.6.2",
-    "rollup": "^2.33.1",
-    "rollup-plugin-less": "^1.1.0",
+    "eslint": "^7.15.0",
+    "postcss": "^8.2.1",
+    "proj4": "^2.6.3",
+    "rollup": "^2.35.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "serve": "^11.3.2",
-    "terser": "^4.8.0",
-    "three": "^0.122.0",
+    "terser": "^5.5.0",
+    "three": "^0.123.0",
     "x18n": "^2.0.3"
   },
   "dependencies": {}
