--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "eslint": "^7.18.0",
     "postcss": "^8.2.4",
     "proj4": "^2.7.0",
-    "rollup": "^2.38.0",
+    "rollup": "^2.38.1",
+    "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2",
     "terser": "^5.5.0",
     "three": "^0.125.0",
-    "x18n": "^2.0.3",
-    "rollup-plugin-terser": "^7.0.2"
+    "x18n": "^2.0.3"
   }
 }
